# proof-frame

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.fly  README.md  fly.toml  handler.py  nvcc-shim.sh
.claude/: CLAUDE.md
.claude/skills/proofframe-implement/: SKILL.md
.claude/skills/proofframe-plan/: SKILL.md
.github/workflows/: docker-prover.yml  fly-deploy.yml
common/: Cargo.toml
common/src/: lib.rs
contracts/: calldata-ImageAttestor.json  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: ImageAttestor.sol
contracts/test/: ImageAttestor.t.sol
docs/: ARCHITECTURE.md  DIAGRAMS.md  PRIVACY.md  TASKS.md  slides.html
frontend/: next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api/prove/: route.ts
frontend/app/api/relay/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/attest/: page.tsx
frontend/app/components/: Footer.tsx  Navigation.tsx
frontend/app/verify/: page.tsx
frontend/lib/: api.ts  contracts.ts  cors.ts  imageHash.ts  prover.ts  wagmi.ts
frontend/scripts/: verify-pixel-hash.ts
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
scripts/: generate-test-images.py  runpod-groth16.sh
tasks/: TASKS.md
test_images/: ethglobal_cannes.signing_key.json  img_8151.metadata.json  img_8151.signing_key.json  nut.metadata.json  nut.signing_key.json  seattle_venue.metadata.json  seattle_venue.signing_key.json
(+1 files in other folders)
