[package]
name = "proofframe-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10", default-features = false, optional = true }

[features]
default = []
crypto = ["sha2"]

[dev-dependencies]
sha2 = "0.10"
